feat: implement Needleman-Wunsch algorithm for track similarity
This adds an API endpoint that calculates (live) the Needleman-Wunsch
distance between the given workout and all other workouts.

Ref: #153
